--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Process<br>Automations</span>
+                  <span class="service__heading__content__text">App<br>Automations</span>
                 </span>
               </h3>
               <p class="service__description">Forms, Tables & Servers</p>
               <ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
-                <li class="service__list__item">Building intuitive mobile web apps</li>
+                <li class="service__list__item">Building integrated mobile web apps</li>
               </ul>
             </section>
           </div>
