--- a/index.html
+++ b/index.html
@@ -266,9 +266,11 @@
 		<li class="service__list__item"><a href="https://www.readworks.org" target="_blank" rel="nofollow"><img src="img/readworks_logo.svg" width="30%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://www.quill.org" target="_blank" rel="nofollow"><img src="img/quill_logo.png" width="18%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://readtheory.org" target="_blank" rel="nofollow"><img src="img/readtheory_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-               <li class="service__list__item"><a href="https://freereadingprogram.com/" target="_blank" rel="nofollow"><img src="img/freereading-logo-small.png" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+               <li class="service__list__item"><a href="https://gonoodle.com/" target="_blank" rel="nofollow"><img src="img/gonoodle.png" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://classicsforkids.com" target="_blank" rel="nofollow"><img src="img/classicsforkids_logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		 <li class="service__list__item"><a href="https://h5p.org" target="_blank" rel="nofollow"><img src="img/h5p_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://octostudio.org/" target="_blank" rel="nofollow"><img src="img/logo-octopus.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://www.oerproject.com/" target="_blank" rel="nofollow"><img src="img/oer-logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
+		<li class="service__list__item"><a href="https://h5p.org" target="_blank" rel="nofollow"><img src="img/h5p_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 
 		</ul>
             </section>
