--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">Intermediate Bulk Container liquid storage monitoring with a precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste</p>
+              <p class="service__description">Intermediate Bulk Container liquid storage monitoring with a precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
