--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="project">
             <section aria-label="RFP">
 
-              <h3 class="project__name">But, I can still automate your task.</h3>
+              <h3 class="project__name">But, I can still build your prototype.</h3>
                <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consulting session</a>
                <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View client project reviews</a>
                             <!--
