--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-        <h3 class="project__name">Recommended tools for...</h3>
+        <h3 class="project__name">Recommended for...</h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
               <h3 class="project__name">Living</h3>
@@ -280,8 +280,8 @@
             <section aria-label="1" class="service">
               <h3 class="project__name">Building</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
-                 <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-                <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
+		<li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></a></li>
+                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
 		<li class="service__list__item"><a href="https://github.com" target="_blank" rel="nofollow"><img  src="img/github_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	    
