--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
             <section aria-label="1" class="service">
               <h3 class="project__name">Building</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
-		<li class="service__list__item"><a href="https://seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="80%"/></a></li>
+		<li class="service__list__item"><a href="https://seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="20%"/></a></li>
 		<li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
 		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
-		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/dfrobot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
+		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="12%"/></a></li>
 	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
