--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
+		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
 	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	    	<li class="service__list__item"><a href="https://github.com" target="_blank" rel="nofollow"><img  src="img/github_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
