--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build cutting edge prototypes for telemetry workflow automation, leveraging open-source IoT components and tools. These intelligent small-scale solutions empower us to seamlessly control and monitor our electricity and stored liquids usage. Enabling optimised usage through real-time insights that enhance efficiency and reduce waste.</p>
+      <p class="about__text">I design telemetry workflow automation prototypes, harnessing open-source IoT components and tools to create smart, small-scale solutions. These innovations enable seamless monitoring and control of electricity and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
       <ul class="social-share-btns">
