--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <span class="service__heading__content__text">Smart<br>Grid</span>
                 </span>
               </h3>
-              <p class="service__description">On-grid AC-powered lighting and power management, featuring an intuitive on-demand control panel and real-time consumption metrics display for enhanced efficiency and monitoring.</p>
+              <p class="service__description">On-grid AC power management, featuring an intuitive on-demand control panel and real-time consumption metrics display for enhanced efficiency and monitoring.</p>
               <!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
