--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
                 <li class="service__list__item"><a href="https://classicsforkids.com" target="_blank" rel="nofollow"><img src="img/classicsforkids_logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://octostudio.org/" target="_blank" rel="nofollow"><img src="img/logo-octopus.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://www.oerproject.com/" target="_blank" rel="nofollow"><img src="img/oer-logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
+		<li class="service__list__item"><a href="https://openedx.org/" target="_blank" rel="nofollow"><img src="img/open-edx.jpg" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://h5p.org" target="_blank" rel="nofollow"><img src="img/h5p_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 
 		</ul>
