--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <section aria-labelledby="projects__heading" id="projects">
-      <h2 class="projects__heading" id="projects__heading">Engage</h2>
+      <h2 class="projects__heading" id="projects__heading">Appointments & Reviews</h2>
 
 
       <div class="projects__projects-layout">
@@ -239,7 +239,7 @@
 
 
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
-      <h2 class="what-we-do__heading" id="what-we-do__heading">Enable</h2>
+      <h2 class="what-we-do__heading" id="what-we-do__heading">Tools</h2>
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
