--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I design telemetry workflow automation prototypes, harnessing open-source IoT components and tools to create smart, small-scale solutions. These innovations enable seamless monitoring and control of electricity and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
+      <p class="about__text">I design IoT prototypes, harnessing open-source components and tools to create smart, scalable solutions. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
       <ul class="social-share-btns">
