--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="I build workflow automations with open-source tools that help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
+    <meta property="og:description" content="Always creative THINKING different - I design IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I design IoT prototypes, harnessing open-source components and tools to create smart, scalable solutions. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
+      <p class="about__text">I design IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projecs. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
       <ul class="social-share-btns">
