--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="Always creative THINKING different - I design IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
+    <meta property="og:description" content="Always creative THINKING different - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I design IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
+      <p class="about__text">I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
       <ul class="social-share-btns">
@@ -191,7 +191,7 @@
 
               <h3 class="project__name">But, I can still build your prototype.</h3>
                <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consulting session</a>
-               <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View client project reviews</a>
+               <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View project reviews</a>
                             <!--
               <p class="project__description">Please outline your work request and expectation below.</p>
 
