--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC lighting system with an intelligent on-demand control panel and presence-based sensory automation for optimized energy usage.</p>
+              <p class="service__description">Off-grid solar-powered DC lighting ecosystem with an intelligent on-demand control panel and presence-based sensory automation for optimized energy usage.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
