--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="Always creative THINKING different - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
+    <meta property="og:description" content="Always creative THINKING different - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of lighting, electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
+      <p class="about__text">I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of lighting, electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
       <ul class="social-share-btns">
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC lighting ecosystem with an intelligent on-demand control panel and presence-based sensory automation for optimized energy usage.</p>
+              <p class="service__description">Off-grid solar-powered DC lighting ecosystem with an intelligent on-demand control panel and presence-based sensory automation for optimised energy usage.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
@@ -291,7 +291,8 @@
 		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
 	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-	    	<li class="service__list__item"><a href="https://github.com" target="_blank" rel="nofollow"><img  src="img/github_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
+	    	<li class="service__list__item"><a href="https://github.com/copilot" target="_blank" rel="nofollow"><img  src="img/githubcopilot.jpeg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
+	    	<li class="service__list__item"><a href="https://manus.im" target="_blank" rel="nofollow"><img  src="img/manusai.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		</ul>
             </section>
           </div>  
