--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="Always creative THINKING different - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of lighting, electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
+    <meta property="og:description" content="Always creative THINKING different Fablab - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of lighting, electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -52,7 +52,7 @@
 
     <section class="about">
       <hr class="about__hr">
-      <p class="about__tagline">always creative THINKING different</p>
+      <p class="about__tagline">always creative THINKING different Fablab</p>
       <p class="about__text">I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless monitoring and control of lighting, electricity consumption and liquid storage, delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC lighting ecosystem with an intelligent on-demand control panel and presence-based sensory automation for optimised energy usage.</p>
+              <p class="service__description">Off-grid solar-powered DC lighting ecosystem with intelligent on-demand control panels and presence-based sensory automation for optimised energy usage. For Eco-cabins, Garden rooms & Safari lodges.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
@@ -132,7 +132,7 @@
                   <span class="service__heading__content__text">Smart<br>Grid</span>
                 </span>
               </h3>
-              <p class="service__description">On-grid AC power management, featuring an intuitive on-demand control panel and real-time consumption metrics display for enhanced efficiency and monitoring.</p>
+              <p class="service__description">On-grid AC power management, featuring an intuitive on-demand control panels and real-time consumption metrics display for enhanced efficiency and monitoring. For Homes, Offices, Studios & Workshops.</p>
               <!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
@@ -148,7 +148,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">Intermediate Bulk Container liquid storage monitoring with a precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste.</p>
+              <p class="service__description">Intermediate Bulk Container liquid storage monitoring with a precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste. For Beverage processors & Pressure Washing cleaners.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
