--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa3d.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
+		<li class="service__list__item"><a href="https://squareline.io" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/squareline_logo.png" width="13%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
 	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	    	<li class="service__list__item"><a href="https://github.com/copilot" target="_blank" rel="nofollow"><img  src="img/githubcopilot.jpeg" width="14%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
