--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="Always creativeTHINKINGdifferent fablab - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless control and monitoring of living spaces, electricity consumption and liquid distribution. Delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
+    <meta property="og:description" content="Always creative THINKING different! - I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless control and monitoring of living spaces, power management and liquid storage. Delivering real-time insights that optimise usage, enhance efficiency, and minimise waste." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -52,8 +52,8 @@
 
     <section class="about">
       <hr class="about__hr">
-      <p class="about__tagline">always creativeTHINKINGdifferent fablab</p>
-      <p class="about__text">I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless control and monitoring of living spaces, electricity consumption and liquid distribution. Delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
+      <p class="about__tagline">Always creative THINKING different!</p>
+      <p class="about__text">I build IoT prototypes, harnessing open-source components and tools to deliver smart, scalable projects. These innovations enable seamless control and monitoring of living spaces, power management and liquid storage. Delivering real-time insights that optimise usage, enhance efficiency, and minimise waste.</p>
     
       <div >
       <ul class="social-share-btns">
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Hut</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC living space including intelligent on-demand control panels, with presence-based sensory automation - for optimised energy & water usage, and waste management. For Safari lodges, Eco-cabins & Garden rooms. </p>
+              <p class="service__description">Off-grid solar-powered DC living space including intelligent on-demand control panels, with presence-based sensory automation - for optimised energy & water usage, and waste management. For Safari lodges, Eco-cabins & Garden rooms.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
@@ -148,7 +148,7 @@
                   <span class="service__heading__content__text">Smart<br>Tap</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC liquid storage and dispensing terminal with integrated IBC tank, precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste. For contactless Beverage dispensers &  Hand washing stations.</p>
+              <p class="service__description">Off-grid solar-powered DC liquid storage with precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste. For Beverage & Chemical processors.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
