--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Smart<br>Hut</span>
+                  <span class="service__heading__content__text">Smart<br>space</span>
                 </span>
               </h3>
               <p class="service__description">Off-grid solar-powered DC living space including intelligent on-demand control panels, with presence-based sensory automation - for optimised energy & water usage, and waste management. For Safari lodges, Eco-cabins & Garden rooms.</p>
@@ -129,7 +129,7 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Smart<br>Grid</span>
+                  <span class="service__heading__content__text">Smart<br>grid</span>
                 </span>
               </h3>
               <p class="service__description">On-grid AC power management, featuring intuitive on-demand control panels and real-time consumption metrics display for enhanced efficiency and monitoring. For Homes, Offices, Studios & Workshops.</p>
@@ -145,7 +145,7 @@
             <section aria-label="3" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Smart<br>Tap</span>
+                  <span class="service__heading__content__text">Smart<br>tank</span>
                 </span>
               </h3>
               <p class="service__description">Off-grid solar-powered DC liquid storage with precision level gauge, on-demand valve control, and real-time flow metrics display to streamline usage and prevent waste. For Beverage & Chemical processors.</p>
