--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Grid</span>
                 </span>
               </h3>
-              <p class="service__description">On-grid AC power management, featuring intuitive on-demand control panels and real-time consumption metrics display for enhanced efficiency and monitoring. For Homes, Offices, Studios & Workshops.</p>
+              <p class="service__description">Practical AC Grid Power Management. Designed for Homes, Offices, Studios & Workshops. Enhance efficiency with intuitive on-demand control panels and real-time consumption metrics that empower users to monitor, manage, and optimise their energy usage effortlessly.</p>
               <!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
@@ -131,7 +131,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC living space including intelligent on-demand control panels, with presence-based sensory automation - for optimised resource usage, and waste management. For Safari lodges, Eco-cabins & Garden rooms.</p>
+              <p class="service__description">Sustainable Living Space. Designed for Safari Lodges, Eco-Cabins & Garden Rooms. A fully solar-powered, 12VDC ecosystem featuring intelligent on-demand control panels and presence-based sensory automation for optimised resource usage and efficient waste management—ensuring hassle-free operation in remote settings.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
@@ -147,7 +147,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">Off-grid solar-powered DC bulk liquid storage with precision level gauge and real-time flow metrics display, to streamline usage and prevent waste. For Beverage & Chemical processors.</p>
+              <p class="service__description">Autonomous Bulk Liquid Storage. Designed for Beverage & Chemical Processors. A solar-powered liquid storage system featuring a precision level gauge and real-time flow metrics to streamline usage, prevent waste, and ensure accurate monitoring for efficient resource management in off-grid operations.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
