--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">Intermediate Bulk Container Liquid Storage. Designed for Beverage & Chemical Processors. A solar-powered liquid storage system featuring a precision level gauge and real-time flow metrics to streamline usage, prevent waste, and ensure accurate monitoring for efficient resource management in off-grid operations.</p>
+              <p class="service__description">Intermediate Bulk Container Liquid Storage. Designed for Beverage & Chemical Processors. A 5VDC ecosystem featuring a precision level gauge and real-time flow metrics to streamline usage, prevent waste, and ensure accurate monitoring for efficient liquid resource management in remote operations.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
