--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Sustainable Living Space. Designed for Safari Lodges, Eco-Cabins & Garden Rooms. A fully solar-powered, 12VDC ecosystem featuring intelligent on-demand control panels and presence-based sensory automation for optimised resource usage and efficient waste management—ensuring hassle-free operation in remote settings.</p>
+              <p class="service__description"> Sustainable and Modular Living Space. Designed for Safari Lodges, Eco-Cabins & Garden Rooms. Scalable from a single-room unit to a two-room setup with a deck. This fully solar-powered ecosystem integrates intelligent low-voltage lighting control with presence-based automation, and charging points for optimised energy efficiency. The unit is expandable with an optional sanitary partition, featuring a waterless toilet, a contactless hand-washing tap, and a rainwater harvesting system. Built on an adaptive framework, to offer a future-proof, self-sustaining environment, designed for comfort, efficiency, and resilience, even in remote locations.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
