--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Sustainable Modular Habitat. Designed for Safari Lodges, Eco-Cabins & Garden Rooms. Scalable from a single-room unit to a two-room setup with a deck. A fully solar-powered 12VDC ecosystem that integrates intelligent low-voltage lighting control with presence-based automation, and charging points for optimised energy efficiency. The unit is expandable with an optional sanitary extension, providing a waterless toilet, a contactless hand-washing tap, and a rainwater harvesting kit. </p>
+              <p class="service__description">Sustainable Modular Habitat. Designed for Safari Lodges, Eco-Cabins & Garden Rooms. Scalable from a single-room unit to a two-room setup with a deck. A fully solar-powered 12VDC ecosystem that integrates intelligent low-voltage lighting control with presence-based automation, and charging points for optimised energy efficiency. Expandable with an optional sanitary extension, providing a waterless toilet, a contactless hand-washing tap, and a rainwater harvesting kit.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
@@ -147,7 +147,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">Intermediate Bulk Container Liquid Storage. Designed for Beverage & Chemical Processors. A hybrid solar-powered 5VDC ecosystem that integrates a precision level gauge and real-time flow metrics. To streamline usage, prevent waste, and ensure accurate monitoring for efficient liquid resource management in remote operations.</p>
+              <p class="service__description">Intermediate Bulk Container Liquid Storage. Designed for Beverage & Chemical Processors. A hybrid solar-powered 5VDC ecosystem that integrates a precision level gauge and real-time flow metrics. Streamline usage, prevent waste, and ensure accurate monitoring for efficient liquid resource management in remote operations.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
