--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Grid</span>
                 </span>
               </h3>
-              <p class="service__description">⚡ Building Energy Management System transforming how buildings manage electricity. Designed for homes, offices, studios, and workshops, it provides on-demand control panels and real-time consumption metrics. This intuitive system empowers users to monitor and optimise energy usage effortlessly, reducing costs and boosting operational efficiency. </p>
+              <p class="service__description">⚡ Building Energy Management System transforming how buildings manage electricity. Designed for homes, offices, studios, and workshops, it provides on-demand control panels and real-time consumption metrics. This intuitive solution empowers users to monitor and optimise energy usage effortlessly, reducing costs and boosting operational efficiency.</p>
               <!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
