--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Electro-metrica</span>
+                  <span class="service__heading__content__text">Electro:metrica</span>
                 </span>
               </h3>
               <p class="service__description">⚡ A real-time electricity management project designed for residential and commercial applications. It features an integrated telemetry platform that provides live consumption metrics. The on-demand control interfaces allows users to regulate consumption thresholds, and implement automated energy-saving routines.</p>
@@ -129,7 +129,7 @@
             <section aria-label="3" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Hydro-metrica</span>
+                  <span class="service__heading__content__text">Hydro:metrica</span>
                 </span>
               </h3>
               <p class="service__description">💧A smart water telemetry system designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, resistive level gauge sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimizing waste and improving overall system efficiency.</p>
@@ -144,7 +144,7 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Smartspace</span>
+                  <span class="service__heading__content__text">Smart:space</span>
                 </span>
               </h3>
               <p class="service__description">🛖 Sustainable modular habitat re-imagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design includes a compact single-room unit, and an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and innovative design appeals to people pursuing sustainable off-grid living - while offering investors a unique entry into a growing market of green, modular habitats.</p>
