--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <button id="toggleButton">+ View Diagram</button>
   
   <!-- Diagram Container -->
-  <div class="diagram-container" id="diagramContainer">
+  <div class="diagram-container" id="diagramContainer1">
   <pre class="diagram">
                    +-------------------------------+                     
                    |    Cloud / Remote Server      |                     
@@ -195,7 +195,7 @@
   <button id="toggleButton">+ View Diagram</button>
   
   <!-- Diagram Container -->
-  <div class="diagram-container" id="diagramContainer">
+  <div class="diagram-container" id="diagramContainer2">
   <pre class="diagram">
                               +------------------------------------------+                              
                               |           Cloud / Remote Server          |                              
