--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <li class="service__list__item">Building reliable data pipelines</li>
               </ul>-->
  <!-- Toggle Button -->
-  <button id="toggleButton">+ View Diagram</button>
+  <button id="toggleButton1">+ View sketch</button>
   
   <!-- Diagram Container -->
   <div class="diagram-container" id="diagramContainer1">
@@ -192,7 +192,7 @@
                 <li class="service__list__item">Building Internet of Things</li>
               </ul>-->
  <!-- Toggle Button -->
-  <button id="toggleButton">+ View Diagram</button>
+  <button id="toggleButton2">+ View sketch</button>
   
   <!-- Diagram Container -->
   <div class="diagram-container" id="diagramContainer2">
