--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Electro:metrica</span>
                 </span>
               </h3>
-              <p class="service__description">⚡ A real-time electricity management project designed for residential and commercial applications. It features an integrated telemetry platform that provides live consumption metrics. The on-demand control interfaces allows users to regulate consumption thresholds, and implement automated energy-saving routines.</p>
+              <p class="service__description">⚡ A real-time electricity management project designed for residential and commercial applications. It features an integrated telemetry platform that provides live/historical consumption metrics. The on-demand control interfaces allows users to regulate consumption thresholds, and implement automated energy-saving routines.</p>
 		<!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
@@ -186,7 +186,7 @@
                   <span class="service__heading__content__text">Hydro:metrica</span>
                 </span>
               </h3>
-              <p class="service__description">💧A smart water telemetry project designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, resistive level gauge sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimising waste and improving overall system efficiency.</p>
+              <p class="service__description">💧 A smart water telemetry project designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimising waste and improving overall system efficiency.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
