--- a/index.html
+++ b/index.html
@@ -54,7 +54,95 @@
       <hr class="about__hr">
       <p class="about__tagline">Always creative THINKING different!</p>
       <p class="about__text">I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.</p>
-    
+      <button id="toggleButton0">+ Read more...</button>
+  
+  <!-- Diagram Container -->
+  <div class="diagram-container" id="diagramContainer0">
+  <pre class="diagram">
+	 <p>
+    The Internet of Things (IoT) is reshaping how we interact with our surroundings by transforming everyday objects into smart devices that communicate with one another. IoT creates a highly interconnected environment that generates abundant real-time data. Meanwhile, workflow automation capitalises on these data streams to streamline tasks and optimise processes, reducing manual workloads and promoting efficiency.
+  </p>
+
+  <h2>How IoT Enhances Workflow Automation</h2>
+  <p>
+    The union of IoT with workflow automation is driving enhanced efficiency across various environments. Here’s how IoT makes a difference:
+  </p>
+
+  <h3>Real-Time Data Collection</h3>
+  <p>
+    IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your canister, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
+  </p>
+
+  <h3>Automation of Routine Tasks</h3>
+  <p>
+    In both residential and commercial settings, everyday tasks can be automated to free up time and minimise errors. Smart devices can automatically adjust lighting based on occupancy, and they can monitor gas usage and water flow — ensuring that critical operations run efficiently.
+  </p>
+
+  <h2>Resource Management with IoT</h2>
+  <p>
+    Efficient management of electricity, gas, and water resources is critical—especially in challenging regions like Southern Africa. IoT offers innovative solutions to address these limitations head-on.
+  </p>
+
+  <h3>Energy Resource Management</h3>
+  <p>
+    IoT can have a substantial impact through:
+  </p>
+  <ul>
+    <li>
+      <strong>Electricity Monitoring:</strong> Provide detailed real-time insight into consumption patterns, which helps identify inefficiencies and adjust usage.
+    </li>
+    <li>
+      <strong>Gas Monitoring:</strong> Provide accurate readings of the remaining gas content. These measurements help in planning timely refills and ensuring uninterrupted operations.
+    </li>
+  </ul>
+
+  <h3>Water Resource Management</h3>
+  <p>
+    In addition to energy, water is a crucial resource. IoT-enabled water management can significantly improve conservation by providing real-time insights into usage:
+  </p>
+  <ul>
+    <li>
+      <strong>Leak Detection and Monitoring:</strong> Sensors installed along pipelines or at water fixtures continuously measure flow and pressure, quickly identifying leaks or unusual usage patterns.
+    </li>
+    <li>
+      <strong>Usage Optimisation:</strong> Smart irrigation systems, driven by moisture sensors and weather data, ensure that watering schedules are perfectly timed for gardens or agricultural fields, conserving water and promoting plant health.
+    </li>
+  </ul>
+
+  <h2>Creating Intelligent Environments</h2>
+  <p>
+    IoT and workflow automation extend far beyond basic resource management—they are transforming spaces into smart, adaptive environments that respond to our behavior and needs.
+  </p>
+
+  <h3>Smart Homes and Commercial Spaces</h3>
+  <p>
+    Imagine residences where lighting, water, and gas systems are intelligently monitored by IoT networks, and commercial spaces where entire buildings adjust to occupancy levels and usage patterns automatically. This creates efficient, comfortable, and safe environments, with each resource managed based on real-time data.
+  </p>
+
+  <h3>Personalised Experiences</h3>
+  <p>
+    IoT technology enables systems to tailor operations to individual priorities. Whether it’s achieving a perfectly lit living space, ensuring a commercial property meets stringent operational standards or precise gas level measurements to alert when running low, smart devices support sustainability and enhance user satisfaction.
+  </p>
+
+  <h2>Bringing Your IoT Vision to Life</h2>
+  <p>
+    As a Workflow Automation Expert, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
+  </p>
+  <p>My comprehensive approach includes:</p>
+  <ul>
+    <li><strong>Detailed Consultation:</strong> I work with you to understand your specific energy, water, and operational needs.</li>
+    <li><strong>Tailored Solution Design:</strong> I develop custom automation and IoT project that seamlessly integrate into your environment.</li>
+    <li><strong>Prototyping and Testing:</strong> I build and test prototypes to ensure that your project is scalable, reliable, and accurate.</li>
+    <li><strong>Ongoing Support:</strong> I provide continuous guidance and support as you refine your project and expand its capabilities.</li>
+  </ul>
+  <p>
+    If you’re exploring ideas in IoT and need a partner to help build a prototype that redefines resource management for your home or business, I can turn your innovative concepts into a sustainable, efficient reality.
+  </p>
+  <p>
+    Are you ready to transform your environment with intelligent automation and IoT? Let’s start the conversation and build solutions that are efficient, sustainable, and perfectly tailored to your needs.
+  </p>  
+  </pre>
+  </div>
       <div >
       <ul class="social-share-btns">
         <li class="facebook"> 
